--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ background-image: url("./img/dalum2.jpg");
   .small-box {
     height: 400px;
     width: 60%;
-    background-image: url("./img/sun.jpg");
+    background-image: url("./img/newsletter/sun.jpg");
     background-size: cover;
   }
   
@@ -848,10 +848,10 @@ BOUTIQUE
             />
             <div class="testimonial-text rounded text-center p-4">
               <p>
-                Je rends grâce à Dieu pour avoir guéri ma maladie grave, une véritable intervention divine qui a transformé ma vie.
+                Je rends grâce à Dieu pour avoir guéri ma maladie grave suite à un programme en direct(Brigarde de prière), une véritable intervention divine qui a transformé ma vie.
               </p>
-              <h5 class="mb-1">Guérison Miraculeuse</h5>
-              <span class="fst-italic">Edouard</span>
+              <h5 class="mb-1">Edouard</h5>
+              <span class="fst-italic">Guérison Miraculeuse</span>
             </div>
           </div>
           <div class="testimonial-item text-center">
@@ -862,10 +862,10 @@ BOUTIQUE
             />
             <div class="testimonial-text rounded text-center p-4">
               <p>
-                La restauration de ma famille, autrefois déchirée par les conflits, est un miracle qui me remplit de gratitude envers Dieu.
+                La restauration de ma famille, autrefois déchirée par les conflits, est un miracle qui me remplit de gratitude envers le Dieu de La grâce parle.
               </p>
-              <h5 class="mb-1">Famille Restaurée</h5>
-              <span class="fst-italic">Jean</span>
+              <h5 class="mb-1">jean</h5>
+              <span class="fst-italic">Famille Restaurée</span>
             </div>
           </div>
           <div class="testimonial-item text-center">
@@ -876,15 +876,15 @@ BOUTIQUE
             />
             <div class="testimonial-text rounded text-center p-4">
               <p>
-                J'étais au bord de la faillite, mais Dieu m'a donné une nouvelle opportunité qui a transformé ma situation financière, je suis reconnaissant au-delà des mots.
+                J'étais au bord de la faillite, mais Dieu m'a donné une nouvelle opportunité qui a transformé ma situation financière, je suis reconnaissant au-delà des mots envers notre seigneur Jésus-Christ.
               </p>
-              <h5 class="mb-1">Nouvelle Opportunité</h5>
-              <span class="fst-italic">Yvette</span>
+              <h5 class="mb-1">Yvette</h5>
+              <span class="fst-italic">Nouvelle Opportunité</span>
             </div>
           </div>
         </div>
       </div>
-      <p>Découvrez d'autres témoignages encourageants dans la section     <button class="mui-button success" style="color: #ccc;"><a href="humanitaire.html">The daily mediation</a></button> </p>
+      <p>Découvrez d'autres témoignages encourageants dans la section     <button class="mui-button success" style="color: #ccc;"><a href="temoignage.html">Les témoins de la grâce</a></button> </p>
     </div>
     <!-- Testimonial End -->
 
