--- a/temoignage.html
+++ b/temoignage.html
@@ -453,8 +453,9 @@
         /></i>
         <h6>Edouard(Bénin)</h6>
         <p>
-          Je rends grâce à Dieu pour avoir guéri ma maladie grave, une véritable
-          intervention divine qui a transformé ma vie.
+          Je rends grâce à Dieu pour avoir guéri ma maladie grave suite à un
+          programme en direct(Brigarde de prière), une véritable intervention
+          divine qui a transformé ma vie.
         </p>
       </div>
       <div class="prayer-info">
@@ -464,7 +465,8 @@
         <h6>Jean(Bénin)</h6>
         <p>
           La restauration de ma famille, autrefois déchirée par les conflits,
-          est un miracle qui me remplit de gratitude envers Dieu.
+          est un miracle qui me remplit de gratitude envers le Dieu de La grâce
+          parle.
         </p>
       </div>
       <div class="prayer-info">
@@ -475,7 +477,7 @@
         <p>
           J'étais au bord de la faillite, mais Dieu m'a donné une nouvelle
           opportunité qui a transformé ma situation financière, je suis
-          reconnaissant au-delà des mots
+          reconnaissant au-delà des mots envers notre seigneur Jésus-Christ.
         </p>
       </div>
       <div class="prayer-info">
