--- a/newsletter.html
+++ b/newsletter.html
@@ -522,6 +522,26 @@
     ></a>
 
     <!-- JavaScript Libraries -->
+    <script>
+      // Fonction pour extraire les paramètres d'URL en JavaScript
+      function getParameterByName(name, url) {
+        if (!url) url = window.location.href;
+        name = name.replace(/[\[\]]/g, "\\$&");
+        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+          results = regex.exec(url);
+        if (!results) return null;
+        if (!results[2]) return "";
+        return decodeURIComponent(results[2].replace(/\+/g, " "));
+      }
+
+      // Récupérez les valeurs des paramètres d'URL "id1" et "id2"
+      var id1 = getParameterByName("id1");
+      var id2 = getParameterByName("id2");
+
+      // Affichez les valeurs dans la console
+      console.log("Valeur de id1 : " + id1);
+      console.log("Valeur de id2 : " + id2);
+    </script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
