--- a/newsletter.html
+++ b/newsletter.html
@@ -523,44 +523,40 @@
 
     <!-- JavaScript Libraries -->
     <script>
-        // Fonction pour extraire les paramètres d'URL en JavaScript
-       async(name, url)=> {
-          if (!url) url = window.location.href;
-          name = name.replace(/[\[\]]/g, "\\$&");
-          var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-            results = regex.exec(url);
-          if (!results) return null;
-          if (!results[2]) return "";
-          return decodeURIComponent(results[2].replace(/\+/g, " "));
-        }
-
-        // Récupérez les valeurs des paramètres d'URL "id1" et "id2"
-        var id1 = getParameterByName("id1");
-        var id2 = getParameterByName("id2");
-
-        // Affichez les valeurs dans la console
-        console.log("Valeur de id1 : " + id1);
-        console.log("Valeur de id2 : " + id2);
-        try {
-        const response = await fetch(
-          `https://backend-lagraceparle.onrender.com/api/v1/subscribe-confirm/${id2}`,
-          {
-            method: "GET",
-            headers: {
-              "Content-Type": "application/json",
-            },
-
-          }
-        );
-
-        if (response.ok) {
-        console.log(response)
-
-
-        }
-      } catch (error) {
-        console.log(error)
+      // Fonction pour extraire les paramètres d'URL en JavaScript
+      function getParameterByName(name, url) {
+        if (!url) url = window.location.href;
+        name = name.replace(/[\[\]]/g, "\\$&");
+        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+          results = regex.exec(url);
+        if (!results) return null;
+        if (!results[2]) return "";
+        return decodeURIComponent(results[2].replace(/\+/g, " "));
       }
+
+      // Récupérez la valeur du paramètre d'URL "id2"
+      var id2 = getParameterByName("id2");
+
+      // Affichez la valeur dans la console
+      console.log("Valeur de id2 : " + id2);
+
+      // Effectuez une requête GET vers l'URL backend avec id2
+      var backendUrl = `https://backend-lagraceparle.onrender.com/api/v1/subscribe-confirm/${id2}`;
+
+      // Utilisation de la méthode fetch pour effectuer la requête GET
+      fetch(backendUrl)
+        .then((response) => {
+          if (!response.ok) {
+            throw new Error("La requête a échoué");
+          }
+          return response.json();
+        })
+        .then((data) => {
+          console.log("Réponse du backend :", data);
+        })
+        .catch((error) => {
+          console.error("Erreur lors de la requête :", error);
+        });
     </script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
