--- a/newsletter.html
+++ b/newsletter.html
@@ -39,6 +39,45 @@
     <link href="css/style.css" rel="stylesheet" />
 
     <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #f5f5f5;
+      }
+      /* Styling pour l'élément audio (facultatif) */
+      audio {
+        width: 50%;
+        margin-top: 20px;
+      }
+      .newsletter {
+        /* background-image: url("./img/newsletter/sun.jpg"); */
+        background-position: center;
+        background-size: cover;
+        /* color: #fff; */
+        text-align: center;
+        padding: 20px;
+        border: 4px solid #f0f0f0;
+        margin: 0 200px 0 200px;
+      }
+
+      h1 {
+        font-size: 24px;
+        margin-top: 0;
+      }
+
+      p {
+        /* font-size: 18px; */
+        text-align: justify;
+      }
+      /* end */
+
+      header {
+        background-color: #f1e3c7;
+        color: white;
+        text-align: center;
+        padding: 20px;
+      }
+      /* end */
       .message-box {
         /* border: 2px solid #333; */
         padding: 20px;
@@ -70,6 +109,7 @@
       form {
         max-width: 600px;
         margin: 0 auto;
+        padding: 15px;
       }
       label,
       select,
@@ -100,6 +140,15 @@
         border: none;
         border-radius: 4px;
         cursor: pointer;
+      }
+      @media screen and (max-width: 620px) {
+        .newsletter {
+          margin: 0 0 0 0;
+        }
+        audio {
+          width: 100%;
+          margin-top: 20px;
+        }
       }
     </style>
     <!-- Google tag (gtag.js) -->
@@ -325,54 +374,52 @@
     </div>
     <!-- Page Header End -->
 
-    <h1 class="" style="text-align: center; background: #ffc400">
-      Initiez votre journée en prenant des vitamines spirituelles !
-    </h1>
     <header>
       <h1>Initiez votre journée en prenant des vitamines spirituelles !</h1>
     </header>
     <div id="textLong">
-      <p style="text-align: justify">
+      <p style="text-align: justify; padding: 10px">
         Chaque journée, le Ministère chrétien "La Grâce Parle" propose une
         réflexion inspirante en s'appuyant sur un passage biblique.
       </p>
-      <p>
+      <p style="text-align: justify; padding: 10px">
         À la fin de chaque méditation, nous vous encourageons à prendre part à
         une prière personnelle. Accordez une attention particulière à ce moment
         que vous partagez avec Dieu !
       </p>
-      <p>
+      <p style="text-align: justify; padding: 10px">
         Si le temps vous manque pour lire la méditation, vous avez également la
         possibilité de l'écouter chaque jour... que ce soit dès le matin au
         réveil, pendant votre jogging ou même en voiture...
       </p>
-      <p>Veuillez remplir tous les champs suivants :</p>
+      <p style="text-align: justify; padding: 10px">
+        Veuillez remplir tous les champs suivants :
+      </p>
     </div>
-    <div class="message-box">
-      <h2 class="message-title">Quisque ut nisi</h2>
-      <p class="message-author">Auteur</p>
-      <p class="message-content">
-        Nous vivons dans un monde où le calcul, la compétition et la comparaison
-        sont souvent monnaie courante. Cela peut nous amener à "tenir nos
-        comptes" : compter les succès et les échecs, les bénédictions et les
-        pertes, les faveurs rendues et celles reçues. Cependant, la Bible nous
-        rappelle une perspective différente, une perspective centrée sur la
-        grâce et l'amour de Dieu. Dans cette newsletter, nous allons explorer ce
-        thème à travers quelques versets bibliques inspirants.
-      </p>
-      <h3>L'abondance de la grâce de Dieu</h3>
+    <div class="newsletter">
+      <h1>Arrêtez de « tenir vos comptes »</h1>
       <p>
-        "Et Dieu est puissant pour vous combler de toutes sortes de grâce, afin
-        que, possédant toujours en toutes choses de quoi satisfaire à tous vos
-        besoins, vous abondiez en toute bonne œuvre." - 2 Corinthiens 9:8 Dieu
-        nous comble de Sa grâce sans fin. Nous n'avons pas à "tenir nos comptes"
-        pour obtenir Sa faveur, car Sa grâce est abondante et suffisante.
+        Nous sommes tous appelés à suivre l'exemple de Jésus Christ en
+        pratiquant la grâce et le pardon. Trop souvent, nous "tenons nos
+        comptes" envers les autres, enregistrant chaque erreur et offense. Mais
+        aujourd'hui, nous vous invitons à méditer sur l'importance de laisser
+        aller ces comptes et de marcher dans l'amour, la miséricorde et la
+        réconciliation.
       </p>
+      <audio controls>
+        <source src="votre_audio.mp3" type="audio/mpeg" />
+        Votre navigateur ne supporte pas l'élément audio.
+      </audio>
+      <!-- <img
+        src="./img/newsletter/sun.jpg"
+        alt="Image de fond de la newsletter"
+      /> -->
     </div>
     <br />
-    <h1 id="subscribe" class="" style="text-align: center; background: #ffc400">
-      Abonnement à la newsletter!
-    </h1>
+
+    <header>
+      <h1>Abonnement à la newsletter!</h1>
+    </header>
     <form id="subscribeForm">
       <p id="messageParagraph"></p>
       <label for="names">Nom* :</label>
