--- a/faq.html
+++ b/faq.html
@@ -11,10 +11,11 @@
     <link href="img/logo.jfif" rel="icon" />
 
     <!-- Google Web Fonts -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:ital@1&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap"
       rel="stylesheet"
     />
 
