--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Accueil-La Grâce Parle-Fondation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="" name="keywords" />
+    <meta content="La grâce parle,brigarde de prière,femme de grâce,le jeûne des jeunes,le cocktail des jeunes,worship mood,chambre haute,philharmonie la grâce parle,les témoins de la grâce" name="keywords" />
     <meta content="" name="description" />
 
     <!-- Favicon -->
@@ -336,7 +336,7 @@ background-image: url("./img/dalum2.jpg");
       >
         <a  href="index.html" class="navbar-brand ms-4 ms-lg-0">
           <h6 style="font-size: 20px;" class="fw-bold text-primary m-0">
-            <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
+            <img alt="logo" src="./img/logo.jfif" width="35" style="border-radius: 100%" />
             La Grâce<span class="text-white"> Parle</span>
           </h6>
         </a>
@@ -843,7 +843,7 @@ BOUTIQUE
           <div class="testimonial-item text-center">
             <img
               class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4"
-              src="img/user.png"
+              src="img/user.png" alt="user-testimoni"
               style="width: 100px; height: 100px"
             />
             <div class="testimonial-text rounded text-center p-4">
@@ -856,8 +856,9 @@ BOUTIQUE
           </div>
           <div class="testimonial-item text-center">
             <img
+            alt="user-testimoni"
               class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4"
-              src="img/user.png"
+              src="img/user.png" 
               style="width: 100px; height: 100px"
             />
             <div class="testimonial-text rounded text-center p-4">
@@ -871,7 +872,7 @@ BOUTIQUE
           <div class="testimonial-item text-center">
             <img
               class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4"
-              src="img/user-wife.webp"
+              src="img/user-wife.webp" alt="user-testimoni"
               style="width: 100px; height: 100px"
             />
             <div class="testimonial-text rounded text-center p-4">
@@ -899,7 +900,7 @@ BOUTIQUE
 
       <p>  <a  href="index.html" class="navbar-brand ms-4 ms-lg-0">
         <h6 style="font-size: 20px;" class="fw-bold text-primary m-0">
-          <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
+          <img alt="logo" src="./img/logo.jfif" width="35" style="border-radius: 100%" />
           La Grâce<span class="text-white"> Parle</span>
         </h6>
       </a></p>
