--- a/temoignage.html
+++ b/temoignage.html
@@ -461,7 +461,7 @@
       </div>
       <div class="prayer-info">
         <i class=""
-          ><img src="./img/user-wife.webp" width="100" height="100" alt=""
+          ><img src="./img/user.webp" width="100" height="100" alt=""
         /></i>
         <h6>Jean(Bénin)</h6>
         <p>
