--- a/philharmonie.html
+++ b/philharmonie.html
@@ -477,15 +477,6 @@
       Philharmonie pour rester informé(e) et faire partie d'une famille de
       mélomanes passionnés en cliquant sur ce lien WhatsApp
     </p>
-    <br />
-    <div class="container_video">
-      <div class="video-container">
-        <video controls>
-          <source src="./video/video-philharmonie.mp4" type="video/mp4" />
-          Votre navigateur ne supporte pas la lecture de vidéos.
-        </video>
-      </div>
-    </div>
     <p style="margin: auto; text-align: center">
       <button class="mui-button">
         <a
@@ -496,13 +487,24 @@
         >
       </button>
     </p>
-    <br /><br />>
-    <!-- <header>
-      <h1>
-        Explorez visuellement quelques-uns des instruments joués par
-        l'orchestre.
-      </h1>
-    </header> -->
+    <br />
+    <div class="container_video">
+      <div class="video-container">
+        <video style="object-fit: cover;" poster="./video/poster-phil.png"  controls>
+          <source  src="./video/video-philharmonie.mp4" type="video/mp4" />
+          Votre navigateur ne supporte pas la lecture de vidéos.
+        </video>
+      </div>
+    </div>
+   
+    <br />
+    
+ 
+      <header>
+        <h1> Explorez visuellement quelques-uns des instruments joués par
+          l'orchestre</h1>
+      </header>
+    </header> 
 
     <div class="prayer-info-container">
       <div class="prayer-info">
