--- a/about.html
+++ b/about.html
@@ -315,7 +315,7 @@ Objectifs
   <div
   class="container-fluid donate my-5 py-5"
   data-parallax="scroll"
-  data-image-src="img/fond.avif"
+  data-image-src="img/about.jpg"
 >
   <div class="container py-5">
     <div class="row g-5 align-items-center">
@@ -391,9 +391,9 @@ Objectifs
     <div class="icons">
 
       <span class="icon">&#128161;</span>
-      <button style="background-color: #ffc400;" class="mui-button success"><a style="color: #fff;"  href="newsletter.html">The daily mediation</a></button>
+      <button style="background-color: #ffc400;" class="mui-button success"><a style="color: #fff;"  href="newsletter.html">The Monthly Mediation</a></button>
     </div>
-    <h2 style="color: white;">Recevoir une méditation tous les jours</h2>
+    <h2 style="color: white;"> Recevoir une méditation tous les premiers du mois.</h2>
     <button style=" margin: 5px;  padding: 10px 20px;
     background-color: transparent; 
     color: #fff;
