--- a/faq.html
+++ b/faq.html
@@ -387,10 +387,24 @@
           </p>
         </div>
       </div>
+      <div class="faq-item">
+        <h2 class="question">
+          Question 2 :Comment puis-je faire un don en nature?
+        </h2>
+        <div class="answer">
+          <p>
+            Pour faire un don en nature, veuillez remplir le formulaire de
+            contact en sélectionnant l'option "Dons et Soutien" dans le champ
+            "Sujet" et en fournissant toutes les informations requises. Nous
+            vous recontacterons rapidement pour discuter de la manière dont nous
+            allons collecter les dons en nature.
+          </p>
+        </div>
+      </div>
 
       <div class="faq-item">
         <h2 class="question">
-          Question 2 :À quoi sont destinés les fonds collectés par la fondation?
+          Question 3 :À quoi sont destinés les fonds collectés par la fondation?
         </h2>
         <div class="answer">
           <p>
@@ -405,7 +419,7 @@
 
       <div class="faq-item">
         <h2 class="question">
-          Question 3 : Puis-je faire un don en nature ou en service plutôt qu'en
+          Question 4 : Puis-je faire un don en nature ou en service plutôt qu'en
           argent?
         </h2>
         <div class="answer">
@@ -581,6 +595,7 @@
 
     <div class="faq-container">
       <h1>Partenariats et Collaborations :</h1>
+
       <div class="faq-item">
         <h2 class="question">
           Question 1 :Est-ce que la fondation collabore avec d'autres
@@ -610,7 +625,30 @@
           </p>
         </div>
       </div>
-
+      <div class="faq-item">
+        <h2 class="question">Question 3 :Comment devenir un partenaire ?</h2>
+        <div class="answer">
+          <p>
+            Pour devenir un partenaire, veuillez remplir le formulaire de
+            contact en sélectionnant l'option "Partenariats et Collaborations"
+            dans le champ "Sujet" et en fournissant toutes les informations
+            requises. Nous vous recontacterons rapidement pour discuter des
+            opportunités de collaboration.
+          </p>
+        </div>
+      </div>
+      <div class="faq-item">
+        <h2 class="question">Question 4 :Comment devenir un bénévolat ?</h2>
+        <div class="answer">
+          <p>
+            Pour devenir un bénévolat, veuillez remplir le formulaire de contact
+            en sélectionnant l'option "Bénévolats et Collaborations" dans le
+            champ "Sujet" et en fournissant toutes les informations requises.
+            Nous vous recontacterons rapidement pour discuter des opportunités
+            de collaboration.
+          </p>
+        </div>
+      </div>
       <!-- Ajoutez plus de questions et réponses ici -->
     </div>
 
