--- a/temoignage.html
+++ b/temoignage.html
@@ -427,7 +427,7 @@
       <div class="image-container">
         <img
           style="opacity: 0.6; width: 100%; height: 300px; object-fit: cover"
-          src="./img/world (2).png"
+          src="./img/worlder.png"
           alt="Carte du Monde"
         />
       </div>
@@ -600,11 +600,13 @@
           <span class="icon">&#128161;</span>
           <button style="background-color: #ffc400" class="mui-button success">
             <a style="color: #fff" href="newsletter.html"
-              >The daily mediation</a
+              >The Monthly Mediation</a
             >
           </button>
         </div>
-        <h2 style="color: white">Recevoir une méditation tous les jours</h2>
+        <h2 style="color: white">
+          Recevoir une méditation tous les premiers du mois
+        </h2>
         <button
           style="
             margin: 5px;
