--- a/ministere.html
+++ b/ministere.html
@@ -50,6 +50,13 @@
       gtag("config", "G-FSM4EQJ2E1");
     </script>
     <style>
+       header {
+        background-color: #f1e3c7;
+        color: white;
+        text-align: center;
+        padding: 20px;
+      }
+      /* end */
       /* Styles pour les grands écrans */
 .image-container {
   display: flex;
@@ -432,12 +439,11 @@ padding: 15px;
         </div>
       </div>
     </div> -->
-    <div
-      class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
-    >
-      À propos de nous
-    </div>
-
+  
+    <header>
+      <h1>Explorez nos programmes pour en savoir davantage sur notre ministère.</h1>
+    </header>
+    <br>
     <div class="parent">
       <div class="child7"></div>
       <div class="child2">
@@ -736,9 +742,9 @@ padding: 15px;
         <div class="icons">
   
           <span class="icon">&#128161;</span>
-          <button style="background-color: #ffc400;" class="mui-button success"><a style="color: #fff;"  href="newsletter.html">The daily mediation</a></button>
+          <button style="background-color: #ffc400;" class="mui-button success"><a style="color: #fff;"  href="newsletter.html">The Monthly Mediation</a></button>
         </div>
-        <h2 style="color: white;">Recevoir une méditation tous les jours</h2>
+        <h2 style="color: white;">Recevoir une méditation tous les premiers du mois</h2>
         <button style=" margin: 5px;  padding: 10px 20px;
         background-color: transparent; 
         color: #fff;
