--- a/newsletter.html
+++ b/newsletter.html
@@ -367,7 +367,7 @@
             </li>
 
             <li class="breadcrumb-item text-primary" aria-current="page">
-              Abonnez-vous à la Méditation Quotidienne dès maintenant !
+              Abonnez-vous à la Méditation mensuelle dès maintenant !
             </li>
           </ol>
         </nav>
@@ -376,12 +376,12 @@
     <!-- Page Header End -->
 
     <header>
-      <h1>Initiez votre journée en prenant des vitamines spirituelles !</h1>
+      <h1>Initiez vos mois en prenant des vitamines spirituelles !</h1>
     </header>
     <div id="textLong">
       <p style="text-align: justify; padding: 10px">
-        Chaque journée, le Ministère chrétien "La Grâce Parle" propose une
-        réflexion inspirante en s'appuyant sur un passage biblique.
+        Chaque premier du mois, le Ministère chrétien "La Grâce Parle" propose
+        une réflexion inspirante en s'appuyant sur un passage biblique.
       </p>
       <p style="text-align: justify; padding: 10px">
         À la fin de chaque méditation, nous vous encourageons à prendre part à
@@ -390,11 +390,8 @@
       </p>
       <p style="text-align: justify; padding: 10px">
         Si le temps vous manque pour lire la méditation, vous avez également la
-        possibilité de l'écouter chaque jour... que ce soit dès le matin au
-        réveil, pendant votre jogging ou même en voiture...
-      </p>
-      <p style="text-align: justify; padding: 10px">
-        Veuillez remplir tous les champs suivants :
+        possibilité de l'écouter ... que ce soit dès le matin au réveil, pendant
+        votre jogging ou même en voiture...
       </p>
     </div>
     <div class="newsletter">
@@ -421,6 +418,9 @@
     <header>
       <h1>Abonnement à la newsletter!</h1>
     </header>
+    <p style="text-align: justify; padding: 10px">
+      Veuillez remplir tous les champs suivants :
+    </p>
     <form id="subscribeForm">
       <p id="messageParagraph"></p>
       <label for="names">Nom* :</label>
@@ -428,22 +428,22 @@
 
       <label for="email">Email*</label>
       <input type="email" id="emails" name="email" required />
-      <label for="video">Programmes TV/Video</label>
-      <select id="video" name="video">
+      <!-- <label for="video">Programmes TV/Video</label> -->
+      <!-- <select id="video" name="video">
         <option value="" disabled selected>Choisissez un programme Tv</option>
         <option value="ortb">Ortb</option>
         <option value="youtube">youtube(Brigade de prière)</option>
         <option value="facebook">Facebook(Brigade de prière)</option>
-      </select>
+      </select> -->
 
-      <label for="audio">Programmes AUDIO</label>
-      <select id="audio" name="audio">
+      <!-- <label for="audio">Programmes AUDIO</label> -->
+      <!-- <select id="audio" name="audio">
         <option value="" disabled selected>
           Choisissez un programme Radio
         </option>
         <option value="maranatha">Maranatha(Brigade de prière)</option>
         <option value="tokpa">podcast</option>
-      </select>
+      </select> -->
 
       <button id="submitButton" type="submit">Soumettre</button>
     </form>
