--- a/philharmonie.html
+++ b/philharmonie.html
@@ -777,7 +777,7 @@
       </div>
       <div class="prayer-info">
         <i class=""
-          ><img src="./img/trombone.png" width="80" height="80" alt=""
+          ><img src="./img/cornet.webp" width="80" height="80" alt=""
         /></i>
         <h4>Le cornet</h4>
         <p>
@@ -1027,11 +1027,11 @@
           <span class="icon">&#128161;</span>
           <button style="background-color: #ffc400" class="mui-button success">
             <a style="color: #fff" href="newsletter.html"
-              >The daily mediation</a
+              >The Monthly Mediation</a
             >
           </button>
         </div>
-        <h2 style="color: white">Recevoir une méditation tous les jours</h2>
+        <h2 style="color: white">Recevoir une méditation tous les premiers du mois</h2>
         <button
           style="
             margin: 5px;
