--- a/prayer.html
+++ b/prayer.html
@@ -199,31 +199,10 @@
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link">Accueil</a>
             <a href="about.html" class="nav-item nav-link">À propos</a>
+            <a href="donate.html" class="nav-item nav-link"
+              >Faire un don à la fondation</a
+            >
 
-            <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Soutien et Engagements</a
-              >
-              <div class="dropdown-menu m-0">
-                <!-- <a href="service.html" class="dropdown-item"
-                >Nos différents services</a
-              > -->
-                <a href="donate.html" class="dropdown-item"
-                  >Faire un don à la fondation</a
-                >
-                <a href="contact.html#subscribeForm" class="dropdown-item"
-                  >Devenir partenaire</a
-                >
-
-                <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
-                <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
-                <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
-              </div>
-            </div>
             <div class="nav-item dropdown">
               <a
                 href="#"
@@ -362,17 +341,17 @@
     <br />
 
     <form id="subscribeForm">
-      <label for="sexe">Sexe</label>
+      <!-- <label for="sexe">Sexe</label>
       <select id="sexe" name="sexe">
         <option value="" disabled selected>Précisez</option>
         <option value="Masculin">Masculin</option>
         <option value="Féminin">Féminin</option>
-      </select>
+      </select> -->
       <label for="names">Nom complet* :</label>
       <input type="text" id="names" name="names" required />
 
-      <label for="email">Email*</label>
-      <input type="email" id="emails" name="email" required />
+      <!-- <label for="email">Email*</label>
+      <input type="email" id="emails" name="email" required /> -->
 
       <label for="pays">Sélectionnez un pays africain :</label>
       <select id="pays" name="pays">
