--- a/temoignage.html
+++ b/temoignage.html
@@ -297,31 +297,12 @@
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link">Accueil</a>
             <a href="about.html" class="nav-item nav-link">À propos</a>
+            <a href="donate.html" class="nav-item nav-link"
+              >Faire un don à la fondation</a
+            >
 
             <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Soutien et Engagements</a
-              >
-              <div class="dropdown-menu m-0">
-                <!-- <a href="service.html" class="dropdown-item"
-             >Nos différents services</a
-           > -->
-                <a href="donate.html" class="dropdown-item"
-                  >Faire un don à la fondation</a
-                >
-                <a href="contact.html#subscribeForm" class="dropdown-item"
-                  >Devenir partenaire</a
-                >
 
-                <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
-                <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
-                <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
-              </div>
-            </div>
             <div class="nav-item dropdown">
               <a
                 href="#"
@@ -633,7 +614,9 @@
             cursor: pointer;
           "
         >
-          <a style="color: #fff" href="form_temoignage.html">MON TÉMOIGNAGE</a>
+          <a style="color: #fff" href="form_temoignage.html"
+            >PARTAGER MON TÉMOIGNAGE</a
+          >
         </button>
 
         <button
@@ -659,7 +642,9 @@
             cursor: pointer;
           "
         >
-          <a style="color: #fff" href="prayer.html">DEMANDER LA PRIÈRE</a>
+          <a style="color: #fff" href="prayer.html"
+            >ENVOYER DES REQUÊTES DE PRIÈRES</a
+          >
         </button>
       </div>
     </div>
