--- a/faq.html
+++ b/faq.html
@@ -134,9 +134,23 @@
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link">Accueil</a>
             <a href="about.html" class="nav-item nav-link">À propos</a>
-            <a href="donate.html" class="nav-item nav-link"
-              >Faire un don à la fondation</a
-            >
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                >Soutien et Engagements</a
+              >
+              <div class="dropdown-menu m-0">
+                <a href="newsletter.html" class="dropdown-item">Newsletter</a>
+                <a href="prayer.html" class="dropdown-item"
+                  >Envoyer des requêtes de prière</a
+                >
+                <a href="donate.html" class="dropdown-item"
+                  >Faire un don à la fondation</a
+                >
+              </div>
+            </div>
 
             <div class="nav-item dropdown">
               <a
@@ -192,10 +206,7 @@
                 <a href="contact.html" class="dropdown-item"
                   >Nous écrire un e-mail</a
                 >
-                <a href="newsletter.html" class="dropdown-item">Newsletter</a>
-                <a href="prayer.html" class="dropdown-item"
-                  >Demander une prière</a
-                >
+
                 <a href="faq.html" class="dropdown-item active">Faq</a>
               </div>
             </div>
