--- a/form_temoignage.html
+++ b/form_temoignage.html
@@ -217,9 +217,23 @@
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link">Accueil</a>
             <a href="about.html" class="nav-item nav-link">À propos</a>
-            <a href="donate.html" class="nav-item nav-link"
-              >Faire un don à la fondation</a
-            >
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                >Soutien et Engagements</a
+              >
+              <div class="dropdown-menu m-0">
+                <a href="newsletter.html" class="dropdown-item">Newsletter</a>
+                <a href="prayer.html" class="dropdown-item"
+                  >Envoyer des requêtes de prière</a
+                >
+                <a href="donate.html" class="dropdown-item"
+                  >Faire un don à la fondation</a
+                >
+              </div>
+            </div>
 
             <div class="nav-item dropdown">
               <a
@@ -275,10 +289,7 @@
                 <a href="contact.html" class="dropdown-item"
                   >Nous écrire un e-mail</a
                 >
-                <a href="newsletter.html" class="dropdown-item">Newsletter</a>
-                <a href="prayer.html" class="dropdown-item"
-                  >Demander une prière</a
-                >
+
                 <a href="faq.html" class="dropdown-item">Faq</a>
               </div>
             </div>
@@ -486,7 +497,7 @@
 
     <!-- Footer Start -->
     <div
-      class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
+      class="container-fluid bg-dark text-white-50 footer mt-5 fadeIn"
       data-wow-delay="0.1s"
     >
       <div class="container py-5">
@@ -496,6 +507,7 @@
               <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
                 <h6 style="font-size: 20px" class="fw-bold text-primary m-0">
                   <img
+                    alt="logo"
                     src="./img/logo.jfif"
                     width="35"
                     style="border-radius: 100%"
@@ -562,14 +574,7 @@
               <p>Recevrez nos dernières actualités et mises à jour.</p>
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
-                <!-- <input
-                  class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
-                  type="email"
-                  id="emails"
-                  name="email"
-                  required
-                  placeholder="Votre email"
-                /> -->
+
                 <a
                   id="openModalButton"
                   href="newsletter.html"
@@ -590,15 +595,49 @@
               droits réservés.
             </div>
             <div class="col-md-6 text-center text-md-end">
-              <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
               Designed By <a href="index.html">La Grâce Parle</a>
             </div>
           </div>
         </div>
       </div>
+      <div id="live-icon" style="display: none">
+        <a href="https://zeno.fm/radio/la-grace-parle/" target="_blank">
+          <img
+            src="./img/live2.webp"
+            style="
+              z-index: 10000;
+              position: fixed;
+              bottom: 100px;
+              left: 10;
+              border-radius: 100%;
+              cursor: pointer;
+            "
+            alt="WhatsApp"
+            width="50"
+            height="50"
+        /></a>
+      </div>
+
+      <a
+        href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` "
+        target="_blank"
+      >
+        <img
+          src="./img/whatsapp-icon.png"
+          style="
+            z-index: 10000;
+            position: fixed;
+            bottom: 30px;
+            left: 10;
+            border-radius: 100%;
+          "
+          alt="WhatsApp"
+          width="50"
+          height="50"
+        />
+      </a>
     </div>
     <!-- Footer End -->
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
