--- a/prayer.html
+++ b/prayer.html
@@ -322,7 +322,7 @@
         collaboration avec nos partenaires de prière, nous sommes prêts à
         intercéder en votre faveur. Votre demande demeurera confidentielle.
       </p>
-      <p style="text-align: justify; padding: 15px">
+      <!-- <p style="text-align: justify; padding: 15px">
         La Bible nous encourage inlassablement à nous tourner vers la prière.
         Notre conviction réside dans la certitude que Dieu répond aux prières
         lorsque nous les formulons. La prière est une force puissante, et cette
@@ -345,8 +345,7 @@
         que vos informations personnelles seront traitées de manière
         confidentielle et ne seront pas divulguées à des tiers. Votre requête
         sera transmise de manière anonyme à nos équipes de prière.
-      </p>
-      <p style="text-align: justify; padding: 15px"></p>
+      </p> -->
     </div>
 
     <br />
