--- a/prayer.html
+++ b/prayer.html
@@ -263,7 +263,7 @@
             <div class="nav-item dropdown">
               <a
                 href="#"
-                class="nav-link dropdown-toggle active"
+                class="nav-link dropdown-toggle"
                 data-bs-toggle="dropdown"
                 >Contactez-nous</a
               >
