--- a/prayer.html
+++ b/prayer.html
@@ -368,7 +368,7 @@
         <optgroup label="Afrique">
           <option value="algerie">Algérie</option>
           <option value="angola">Angola</option>
-          <option value="benin">Bénin</option>
+          <option value="benin" selected>Bénin</option>
           <option value="botswana">Botswana</option>
           <option value="burkina-faso">Burkina Faso</option>
           <option value="burundi">Burundi</option>
@@ -435,7 +435,7 @@
           <!-- Ajoutez d'autres pays d'Amérique ici -->
         </optgroup>
       </select>
-      <select required class="form-control" id="subject" name="subject">
+      <!-- <select required class="form-control" id="subject" name="subject">
         <option value="" disabled selected>
           Choisissez un sujet de prière
         </option>
@@ -467,7 +467,7 @@
           Demande de prières générales
         </option>
       </select>
-      <label for="subject" name="subject">Sujet</label>
+      <label for="subject" name="subject">Sujet</label> -->
       <div class="form-floating">
         <textarea
           required
@@ -478,7 +478,7 @@
         ></textarea>
         <label for="message">Votre Message</label>
       </div>
-      <div class="col-12">
+      <!-- <div class="col-12">
         <div class="form-check">
           <input
             type="checkbox"
@@ -500,7 +500,7 @@
           />
           <label for="phoneNumber">Numéro de téléphone</label>
         </div>
-      </div>
+      </div> -->
       <button id="submitButton" type="submit">Soumettre</button>
       <p id="messageParagraph"></p>
     </form>
