--- a/prayer.html
+++ b/prayer.html
@@ -317,10 +317,13 @@
 
     <div id="textLong">
       <p style="text-align: justify; padding: 15px">
-        Vous êtes confronté à un défi et recherchez une solution? N'hésitez pas
-        à nous exposer votre préoccupation dans l'espace dédié ci-dessous. En
-        collaboration avec nos partenaires de prière, nous sommes prêts à
-        intercéder en votre faveur. Votre demande demeurera confidentielle.
+        Vous êtes confronté à un défi et recherchez une solution ? N'hésitez pas
+        à nous exposer votre préoccupation dans l'espace dédié ci-dessous. Nos
+        partenaires de prière intercéderont en votre faveur. Votre demande
+        demeurera confidentielle. Nous sommes déterminés à intercéder pour vous,
+        croyant que Dieu intervient dans chaque situation. Vous n'avez qu'à
+        remplir simplement le formulaire ci-dessous, en exposant brièvement et
+        clairement votre demande.
       </p>
       <!-- <p style="text-align: justify; padding: 15px">
         La Bible nous encourage inlassablement à nous tourner vers la prière.
