--- a/form_temoignage.html
+++ b/form_temoignage.html
@@ -375,7 +375,7 @@
                 required
               /> -->
 
-              <label for="pays">Sélectionnez un pays africain :</label>
+              <label for="pays">Sélectionnez votre pays* :</label>
               <select id="pays" name="pays">
                 <optgroup label="Afrique">
                   <option value="algerie">Algérie</option>
@@ -456,9 +456,9 @@
                   class="form-control"
                   placeholder="Leave a message here"
                   id="message"
-                  style="height: 100px"
+                  style="height: 200px"
                 ></textarea>
-                <label for="message">Votre Message</label>
+                <label for="message">Votre témoignage*</label>
               </div>
 
               <button id="submitButton" type="submit">Soumettre</button>
