--- a/form_temoignage.html
+++ b/form_temoignage.html
@@ -161,7 +161,8 @@
             tous</small
           >
           <small class="ms-4"
-            ><i class="fa fa-envelope me-2"></i>contact@lagraceparle.org</small
+            ><i class="fa fa-envelope me-2"></i
+            >messagerie@lagraceparle.org</small
           >
         </div>
         <div class="col-lg-6 px-5 text-end">
@@ -343,12 +344,22 @@
               Témoignages
             </div>
             <h3>Qu’est-ce que Dieu a fait dans votre vie ?</h3>
-            <p class="mb-4">
+            <!-- <p class="mb-4">
               Avez-vous remarqué des changements dans votre vie grâce au
               Seigneur ? Avez-vous constaté une amélioration de votre situation
               ? Nous vous encourageons à partager votre témoignage, car un
               témoignage est une source de force et un puissant moyen de montrer
               votre gratitude envers Dieu.
+            </p> -->
+            <p class="mb-4">
+              Découvrir les expériences vécues par d'autres avec Dieu est une
+              source d'inspiration incroyable. Éprouvez-vous également cette
+              même connexion ? Si c'est le cas, nous vous encourageons à
+              partager vos propres expériences avec Dieu, qu'elles soient
+              grandes ou modestes. Parfois, ce sont les moments simples de la
+              vie quotidienne qui nous révèlent à quel point Dieu nous comprend,
+              nous aime, et nous rappellent combien nous avons de raisons d'être
+              reconnaissants.
             </p>
 
             <form id="subscribeForm">
@@ -556,8 +567,10 @@
               <i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour
               tous
             </p>
-            <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96</p>
-            <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
+            <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96/50505011</p>
+            <p>
+              <i class="fa fa-envelope me-3"></i>messagerie@lagraceparle.org
+            </p>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Liens rapides</h5>
