--- a/humanitaire.html
+++ b/humanitaire.html
@@ -74,7 +74,7 @@
          tous</small
        >
        <small class="ms-4"
-         ><i class="fa fa-envelope me-2"></i>contact@lagraceparle.org</small
+         ><i class="fa fa-envelope me-2"></i>messagerie@lagraceparle.org</small
        >
      </div>
      <div class="col-lg-6 px-5 text-end">
@@ -551,8 +551,8 @@
             <i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour
             tous
           </p>
-          <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96</p>
-          <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
+          <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96/50505011</p>
+          <p><i class="fa fa-envelope me-3"></i>messagerie@lagraceparle.org</p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h5 class="text-light mb-4">Liens rapides</h5>
