--- a/404.html
+++ b/404.html
@@ -79,7 +79,8 @@
             tous</small
           >
           <small class="ms-4"
-            ><i class="fa fa-envelope me-2"></i>contact@lagraceparle.org</small
+            ><i class="fa fa-envelope me-2"></i
+            >messagerie@lagraceparle.org</small
           >
         </div>
         <div class="col-lg-6 px-5 text-end">
@@ -135,8 +136,6 @@
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link">Accueil</a>
             <a href="about.html" class="nav-item nav-link">À propos</a>
-
-            <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
             <div class="nav-item dropdown">
               <a
                 href="#"
@@ -145,21 +144,16 @@
                 >Soutien et Engagements</a
               >
               <div class="dropdown-menu m-0">
-                <!-- <a href="service.html" class="dropdown-item"
-                 >Nos différents services</a
-               > -->
+                <a href="newsletter.html" class="dropdown-item">Newsletter</a>
+                <a href="prayer.html" class="dropdown-item"
+                  >Envoyer des requêtes de prière</a
+                >
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
-                <a href="contact.html#subscribeForm" class="dropdown-item"
-                  >Devenir partenaire</a
-                >
-
-                <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
-                <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
-                <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
               </div>
             </div>
+
             <div class="nav-item dropdown">
               <a
                 href="#"
@@ -169,8 +163,8 @@
               >
               <div class="dropdown-menu m-0">
                 <!-- <a href="service.html" class="dropdown-item"
-                 >Nos différents services</a
-               > -->
+             >Nos différents services</a
+           > -->
                 <a href="temoignage.html" class="dropdown-item"
                   >Découvrez des témoignages encourageants</a
                 >
@@ -214,24 +208,21 @@
                 <a href="contact.html" class="dropdown-item"
                   >Nous écrire un e-mail</a
                 >
-                <a href="newsletter.html" class="dropdown-item">Newsletter</a>
-                <a href="prayer.html" class="dropdown-item"
-                  >Demander une prière</a
-                >
+
                 <a href="faq.html" class="dropdown-item">Faq</a>
               </div>
             </div>
           </div>
           <!-- <div class="d-none d-lg-flex ms-2">
-           <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
-             Faire un don
-             <div
-               class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
-             >
-               <i class="fa fa-arrow-right"></i>
-             </div>
-           </a>
-         </div> -->
+       <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
+         Faire un don
+         <div
+           class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+         >
+           <i class="fa fa-arrow-right"></i>
+         </div>
+       </a>
+     </div> -->
         </div>
       </nav>
     </div>
@@ -290,20 +281,25 @@
 
     <!-- Footer Start -->
     <div
-      class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
+      class="container-fluid bg-dark text-white-50 footer mt-5 fadeIn"
       data-wow-delay="0.1s"
     >
       <div class="container py-5">
         <div class="row g-5">
           <div class="col-lg-3 col-md-6">
-            <h1 class="fw-bold text-primary m-0">
-              <img
-                src="./img/logo.jfif"
-                width="45"
-                style="border-radius: 100%"
-              />
-              La Grâce<span class="text-white"> Parle</span>
-            </h1>
+            <p>
+              <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
+                <h6 style="font-size: 20px" class="fw-bold text-primary m-0">
+                  <img
+                    alt="logo"
+                    src="./img/logo.jfif"
+                    width="35"
+                    style="border-radius: 100%"
+                  />
+                  La Grâce<span class="text-white"> Parle</span>
+                </h6>
+              </a>
+            </p>
             <p>
               L'emplacement du centre se trouve en face de Santé pour tous à
               Jéricho
@@ -344,8 +340,10 @@
               <i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour
               tous
             </p>
-            <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96</p>
-            <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
+            <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96/50505011</p>
+            <p>
+              <i class="fa fa-envelope me-3"></i>messagerie@lagraceparle.org
+            </p>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Liens rapides</h5>
@@ -362,14 +360,7 @@
               <p>Recevrez nos dernières actualités et mises à jour.</p>
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
-                <!-- <input
-                   class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
-                   type="email"
-                   id="emails"
-                   name="email"
-                   required
-                   placeholder="Votre email"
-                 /> -->
+
                 <a
                   id="openModalButton"
                   href="newsletter.html"
@@ -390,15 +381,49 @@
               droits réservés.
             </div>
             <div class="col-md-6 text-center text-md-end">
-              <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
               Designed By <a href="index.html">La Grâce Parle</a>
             </div>
           </div>
         </div>
       </div>
+      <div id="live-icon" style="display: none">
+        <a href="https://zeno.fm/radio/la-grace-parle/" target="_blank">
+          <img
+            src="./img/live2.webp"
+            style="
+              z-index: 10000;
+              position: fixed;
+              bottom: 100px;
+              left: 10;
+              border-radius: 100%;
+              cursor: pointer;
+            "
+            alt="WhatsApp"
+            width="50"
+            height="50"
+        /></a>
+      </div>
+
+      <a
+        href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` "
+        target="_blank"
+      >
+        <img
+          src="./img/whatsapp-icon.png"
+          style="
+            z-index: 10000;
+            position: fixed;
+            bottom: 30px;
+            left: 10;
+            border-radius: 100%;
+          "
+          alt="WhatsApp"
+          width="50"
+          height="50"
+        />
+      </a>
     </div>
     <!-- Footer End -->
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
