--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ button {
 
 /* Secondary button */
 .secondary {
-  background-color: #f50057;
+  background-color: #4B7462;
   color: white;
 }
 .secondary-button {
@@ -197,7 +197,7 @@ background-image: url("./img/dalum2.jpg");
   .large-box {
     height: 400px;
     width: 60%;
-    background-image: url("./img/furniture.png");
+    background-image: url("./img/about.jpg");
     background-size: cover;
   }
   
@@ -296,7 +296,7 @@ background-image: url("./img/dalum2.jpg");
             tous</small
           >
           <small class="ms-4"
-            ><i class="fa fa-envelope me-2"></i>contact@lagraceparle.org</small
+            ><i class="fa fa-envelope me-2"></i>messagerie@lagraceparle.org</small
           >
         </div>
         <div class="col-lg-6 px-5 text-end">
@@ -885,8 +885,8 @@ background-image: url("./img/dalum2.jpg");
               <i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour
               tous
             </p>
-            <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96</p>
-            <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
+            <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96/50505011</p>
+            <p><i class="fa fa-envelope me-3"></i>messagerie@lagraceparle.org</p>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Liens rapides</h5>
