--- a/mentions.html
+++ b/mentions.html
@@ -78,7 +78,8 @@
             tous</small
           >
           <small class="ms-4"
-            ><i class="fa fa-envelope me-2"></i>contact@lagraceparle.org</small
+            ><i class="fa fa-envelope me-2"></i
+            >messagerie@lagraceparle.org</small
           >
         </div>
         <div class="col-lg-6 px-5 text-end">
@@ -364,7 +365,7 @@
         <div class="answer">
           <p>Le responsable du traitement des données sur ce site Web est :</p>
           <ul>
-            <li>Téléphone : +229 97 96 38 96</li>
+            <li>Téléphone : +229 97 96 38 96/50505011</li>
             <li>Courriel : messagerie@lagraceparle.org</li>
           </ul>
           <p>
@@ -522,7 +523,9 @@
               tous
             </p>
             <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96</p>
-            <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
+            <p>
+              <i class="fa fa-envelope me-3"></i>messagerie@lagraceparle.org
+            </p>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Liens rapides</h5>
