--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ background-image: url("./img/dalum2.jpg");
                     <p class="fs-5 text-white-50 mb-5 animated slideInDown">
                       À travers l'amour du Christ, nous guidons les âmes
                       perdues, offrant espoir, réconfort et but pour illuminer
-                      leur chemin.
+                      leur chemin. jgjg
                     </p>
                           <button class="mui-button secondary-button"><a href="ministere.html">DECOUVRIR</a></button>
                   </div>
