--- a/donate.html
+++ b/donate.html
@@ -116,7 +116,8 @@
         <a  href="index.html" class="navbar-brand ms-4 ms-lg-0">
           <h6 style="font-size: 20px;" class="fw-bold text-primary m-0">
             <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
-            La Grâce<span class="text-white"> Parle</span>
+            <span class="text-white"> La</span>
+            Grâce<span class="text-white"> Parle</span>
           </h6>
         </a>
         <P
