--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@ background-image: url("./img/dalum2.jpg");
       >
         <a  href="index.html" class="navbar-brand ms-4 ms-lg-0">
           <h6 style="font-size: 20px;" class="fw-bold text-primary m-0">
-            <img alt="logo" src="./img/logo.jfif" width="35" style="border-radius: 100%" />
-            La Grâce<span class="text-white"> Parle</span>
+            <img alt="logo" src="./img/logo.jfif" width="35" style="border-radius: 100%" /><span class="text-white"> La</span>
+           Grâce<span class="text-white"> Parle</span>
           </h6>
         </a>
         <P
@@ -726,7 +726,7 @@ background-image: url("./img/dalum2.jpg");
     </div>
   </div>
   <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</h2>
-  <p style="padding: 15px;">Pour envoyer votre action de grâce avec MTN en un clic, cliquer sur le bouton MTN, saisissez le montant suivi de #. Pour MOOV, saisissez le montant suivi, composez *1 suivi de # en cliquant sur le bouton MOOV. </p>
+  <p style="padding: 15px;">Pour envoyer votre action de grâce avec MTN en un clic, cliquer sur le bouton MTN, saisissez le montant suivi de #. Pour MOOV, saisissez le montant , composez *1#</p>
   <p style="padding: 15px;">  <button class="mui-button secondary-button"><a href="tel:*880*41*100000*">MTN</a></button>
     <button class="mui-button primary"><a href="tel:*855*4*1*86260*">MOOV</a></button></p>
   <p style="padding: 15px;">Vous pouvez entrer manuellement le code sur l'affiche, que ce soit pour MTN ou MOOV.</p>
