--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,8 @@
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
           <h6 style="font-size: 20px" class="fw-bold text-primary m-0">
             <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
-            La Grâce<span class="text-white"> Parle</span>
+            <span class="text-white"> La</span>
+            Grâce<span class="text-white"> Parle</span>
           </h6>
         </a>
         <p
@@ -456,7 +457,6 @@
                         <!-- Ajoutez d'autres pays d'Amérique ici -->
                       </optgroup>
                     </select>
-                    <label for="pays">Sélectionnez un pays :</label>
                   </div>
                   <div class="form-floating"></div>
                   <br /><br />
