--- a/form_temoignage.html
+++ b/form_temoignage.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
     <!-- Icon Font Stylesheet -->
@@ -161,8 +161,7 @@
             tous</small
           >
           <small class="ms-4"
-            ><i class="fa fa-envelope me-2"></i
-            >messagerie@lagraceparle.org</small
+            ><i class="fa fa-envelope me-2"></i>contact@lagraceparle.org</small
           >
         </div>
         <div class="col-lg-6 px-5 text-end">
@@ -569,9 +568,7 @@
               tous
             </p>
             <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96/50505011</p>
-            <p>
-              <i class="fa fa-envelope me-3"></i>messagerie@lagraceparle.org
-            </p>
+            <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Liens rapides</h5>
