--- a/ministere.html
+++ b/ministere.html
@@ -14,7 +14,7 @@
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <!-- Icon Font Stylesheet -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
@@ -212,7 +212,7 @@ padding: 15px;
             tous</small
           >
           <small class="ms-4"
-            ><i class="fa fa-envelope me-2"></i>messagerie@lagraceparle.org</small
+            ><i class="fa fa-envelope me-2"></i>contact@lagraceparle.org</small
           >
         </div>
         <div class="col-lg-6 px-5 text-end">
@@ -831,7 +831,7 @@ padding: 15px;
            tous
          </p>
          <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96/50505011</p>
-         <p><i class="fa fa-envelope me-3"></i>messagerie@lagraceparle.org</p>
+         <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
        </div>
        <div class="col-lg-3 col-md-6">
          <h5 class="text-light mb-4">Liens rapides</h5>
