--- a/newsletter.html
+++ b/newsletter.html
@@ -15,10 +15,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
-
     <!-- Icon Font Stylesheet -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
@@ -191,8 +190,7 @@
             tous</small
           >
           <small class="ms-4"
-            ><i class="fa fa-envelope me-2"></i
-            >messagerie@lagraceparle.org</small
+            ><i class="fa fa-envelope me-2"></i>contact@lagraceparle.org</small
           >
         </div>
         <div class="col-lg-6 px-5 text-end">
@@ -367,9 +365,8 @@
     </div>
     <!-- Page Header End -->
 
-    <header>
-      <h1>Initiez vos mois en prenant des vitamines spirituelles !</h1>
-    </header>
+    <h1>Initiez vos mois en prenant des vitamines spirituelles !</h1>
+
     <div id="textLong">
       <p style="text-align: justify; padding: 10px">
         Chaque premier du mois, le Ministère chrétien "La Grâce Parle" propose
@@ -462,10 +459,10 @@
                 </h6>
               </a>
             </p>
-            <p>
+            <li>
               L'emplacement du centre se trouve en face de Santé pour tous à
               Jéricho
-            </p>
+            </li>
             <div class="d-flex pt-2">
               <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a> -->
               <a
@@ -498,14 +495,14 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Adresse</h5>
-            <p>
-              <i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour
-              tous
-            </p>
-            <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96/50505011</p>
-            <p>
-              <i class="fa fa-envelope me-3"></i>messagerie@lagraceparle.org
-            </p>
+
+            <i class="fa fa-map-marker-alt me-3"
+              >Jéricho, Face santé pour tous</i
+            >
+            <br />
+            <i class="fa fa-phone-alt me-3">+229 97 96 38 96/50505011</i>
+            <br />
+            <i class="fa fa-envelope me-3">contact@lagraceparle.org</i>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Liens rapides</h5>
@@ -519,7 +516,7 @@
           <form class="col-lg-3 col-md-6" id="subscribeForm">
             <div>
               <h5 class="text-light mb-4">Newsletter</h5>
-              <p>Recevrez nos dernières actualités et mises à jour.</p>
+              <li>Recevrez nos dernières actualités et mises à jour.</li>
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
 
@@ -555,7 +552,7 @@
             style="
               z-index: 10000;
               position: fixed;
-              bottom: 100px;
+              bottom: 10px;
               left: 10;
               border-radius: 100%;
               cursor: pointer;
@@ -566,26 +563,12 @@
         /></a>
       </div>
 
-      <a
-        href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` "
-        target="_blank"
-      >
-        <img
-          src="./img/whatsapp-icon.png"
-          style="
-            z-index: 10000;
-            position: fixed;
-            bottom: 30px;
-            left: 10;
-            border-radius: 100%;
-          "
-          alt="WhatsApp"
-          width="50"
-          height="50"
-        />
-      </a>
+      <!-- <a href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` " target="_blank">
+       <img src="./img/whatsapp-icon.png" style="z-index: 10000;  position: fixed;bottom: 30px;left: 10;border-radius: 100%;" alt="WhatsApp" width="50" height="50">
+   </a> -->
     </div>
     <!-- Footer End -->
+
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
